# rust-yew-axum-tauri-desktop

./: Cargo.toml
crates/backend/: Cargo.toml
crates/frontend/: Cargo.toml
crates/server/: Cargo.toml
crates/tauri/: Cargo.toml  tauri.conf.json
